--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "eslint-plugin-storybook": "^0.6.10",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.2",
+    "jest-environment-jsdom": "^29.4.2",
+    "postcss": "^8.4.21",
     "rollup": "^3.15.0",
     "rollup-plugin-dts": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
@@ -59,6 +61,7 @@
     "sass": "^1.58.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
+    "tslib": "^2.5.0",
     "typescript": "^4.9.5"
   },
   "peerDependencies": {
@@ -67,5 +70,6 @@
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/wjunhee102"
-  }
+  },
+  "dependencies": {}
 }
