--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
+  "bin": {
+    "@wjunhee102/react-library-base": "./bin/generate-app.js"
+  },
   "keywords": [
     "lib"
   ],
@@ -31,6 +34,7 @@
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
     "@storybook/addon-links": "^6.5.16",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/builder-webpack5": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/preset-scss": "^1.0.3",
@@ -39,6 +43,7 @@
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.4.0",
     "@types/react": "^18.0.28",
+    "autoprefixer": "^10.4.13",
     "babel-jest": "^29.4.2",
     "babel-loader": "^8.3.0",
     "css-loader": "^6.7.3",
@@ -61,6 +66,7 @@
     "sass": "^1.58.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
+    "tailwindcss": "^3.2.7",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5"
   },
@@ -70,6 +76,5 @@
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/wjunhee102"
-  },
-  "dependencies": {}
+  }
 }
